--- a/src/app/home/payment/payment.component.scss
+++ b/src/app/home/payment/payment.component.scss
@@ -1,56 +1,62 @@
-#sec_ordererInfo  .sub_title,
-#sec_orderAddRequest  .sub_title { margin-top: 80px; border-top: 1px solid #eee; }
+@charset "UTF-8";
+/*** 예약정보 ***/
+#sec_orderInfo .sub_title { margin-top: 80px; border-top: 1px solid #eee; }
 
-#sec_orderInfo .list_body .item_info { min-height: 120px; padding: 10px 0; text-align: center; }
+#sec_orderInfo .nm_list .list_head div:not(:last-child) { border-right: 1px solid #ddd; }
 
-#sec_orderInfo .list_head > div { border-right: 1px solid #ddd; }
-#sec_orderInfo .list_body .item_info > div { border-right: 1px solid #ececec; }
-#sec_orderInfo .list_head > div:last-child,
-#sec_orderInfo .list_body .item_info > div:last-child { border-right: 0; }
+#sec_orderInfo .nm_list .list_body .item_info { min-height: 120px; padding: 10px 0; text-align: center; }
 
-#sec_order_info .item_info > div:nth-child(1) { width: 35%; background: tomato; }
-#sec_order_info .item_info > div:nth-child(2) { width: 20%; }
-#sec_order_info .item_info > div:nth-child(3) { width: 15%; }
-#sec_order_info .item_info > div:nth-child(4) { width: 15%; }
-#sec_order_info .item_info > div:nth-child(5) { width: 15%; }
+#sec_orderInfo .nm_list .list_body .item_info div:not(:last-child) { border-right: 1px solid #ddd; }
 
-.item_coupon { background: #fbfbfb; border-top: 1px solid #ececec; }
-.item_coupon > div { float: left; height: 40px; margin-right: 30px; line-height: 35px; }
-.item_coupon label { color: #666; font-size: 14px; }
-.item_coupon input[type="text"] { height: 36px; padding: 3px 8px; border: 1px solid #ddd; }
-.item_coupon button { min-width: 80px; height: 36px; }
+#sec_orderInfo .nm_list .list_body .item_coupon { background: #fbfbfb; border-top: 1px solid #eee; }
 
-.item_coupon .item_price { margin-right: 0; font-size: 18px; }
+#sec_orderInfo .nm_list .list_body .item_coupon div { position: relative; float: left; height: 40px; margin-right: 30px; line-height: 35px; }
 
-.item_price span { vertical-align: middle; }
-.item_price span:first-child { font-size: 14px; color: #aaa; }
+#sec_orderInfo .nm_list .list_body .item_coupon div .msg { position: absolute; top: -20px; left: 20px; min-width: 150px; height: 24px; margin: 0; padding: 0 10px; background: #333; color: #fff; border-radius: 8px; line-height: 24px; font-size: 13px; white-space: nowrap; }
 
+#sec_orderInfo .nm_list .list_body .item_coupon div .msg:after { position: absolute; left: 20px; bottom: -5px; width: 0; height: 0; border: 5px solid transparent; border-bottom-width: 0; border-top-color: #333; content: ''; }
+
+#sec_orderInfo .nm_list .list_body .item_coupon div button { width: 80px; min-width: 80px; height: 36px; padding: 3px 8px; border: 1px solid #ddd; border: 1px solid #333; }
+
+#sec_orderInfo .nm_list .list_body .item_coupon div button.cancel_btn { border: 0; color: #aaa; font-size: 14px; }
+
+#sec_orderInfo .nm_list .list_body .item_coupon .ip_div label { color: #666; font-size: 14px; }
+
+#sec_orderInfo .nm_list .list_body .item_coupon .ip_div label + input[type=text] { width: auto; min-width: 80px; height: 36px; padding: 3px 8px; border: 1px solid #ddd; margin-left: 10px; }
+
+#sec_orderInfo .nm_list .list_body .item_coupon .item_price { margin-right: 0; font-size: 18px; }
+
+#sec_orderInfo .nm_list .list_body .item_coupon .item_price span { vertical-align: middle; }
+
+#sec_orderInfo .nm_list .list_body .item_coupon .item_price span:first-child { color: #aaa; font-size: 14px; }
+
+#sec_orderInfo .nm_list .list_body .item_coupon + .item_coupon { padding-top: 0; border-top: 0; }
+
+/*** 주문자정보 + 추가 요청사항 ***/
 .input_wrap { max-width: 500px; }
 
-#sec_orderPayment { margin-top: 80px; padding: 40px 0; background: #f7f7f7; }
+/*** 결제방식선택 ***/
+#sec_orderPayment { margin-top: 80px; padding: 40px 0; background: #fbfbfb; }
+
 #sec_orderPayment .sub_title h2 { margin-top: 0; }
+
 #sec_orderPayment ul li { margin-right: 30px; }
-#sec_orderPayment ul li input[type="radio"] { margin-right: 5px; }
 
+/** mediaquery **/
+@media (max-width: 1200px) { #sec_orderInfo .nm_list .list_body .item_info div:not(:last-child) { border-right: 0; }
+  .item_coupon div { clear: both; float: left; height: auto; margin-right: 0 !important; margin-bottom: 10px; }
+  .item_coupon div .item_price { width: auto; }
+  .item_coupon div button { width: 120px; height: 46px; }
+  .item_coupon .ip_div { width: 100%; height: auto; } }
 
-@media (max-width: 1200px) {
-    .item_coupon > div { clear: both; float: left; width: 100%; height: auto; margin-right: 0 !important; margin-bottom: 10px; }
-    .item_coupon .ip_div { width: 100%; height: auto; }
-    .item_coupon > div.item_price { width: auto; }
+@media (max-width: 800px) { #sec_orderInfo .list_body .item_info { text-align: left; padding: 20px; }
+  #sec_orderInfo .list_body .item_info .item_title { padding-left: 0; }
+  #sec_orderInfo .list_body .item_info div { border-right: 0; }
+  #sec_orderInfo .list_body .item_info div dl dt { width: 150px; color: #aaa; text-align: left; font-size: 14px; line-height: 24px; }
+  #sec_orderInfo .list_body .item_coupon div button { width: 100%; }
+  #sec_orderInfo .list_body .item_coupon .ip_div { width: 100%; }
+  #sec_orderInfo .list_body .item_coupon .ip_div label { display: none; }
+  #sec_orderInfo .list_body .item_coupon .ip_div label + input[type=text] { width: 100%; margin-left: 0 !important; }
+  #sec_orderInfo .list_body .item_coupon .ip_div .btn_wrap { display: block; width: 100%; height: auto; margin: 10px 0; text-align: right; } }
 
-    .item_coupon button { width: 120px; height: 46px; }
-}
-@media (max-width: 800px) {
-    #sec_orderInfo .list_body .item_info { text-align: left; padding: 20px; }
-    #sec_orderInfo .list_body .item_title { padding-left: 0; }
-    #sec_orderInfo .list_body .item_info dt { width: 180px; color: #aaa; font-size: 14px; line-height: 24px; }
-    #sec_orderInfo .list_body .item_info > div { border-right: 0; }
-
-    .item_coupon > div { width: 100%; }
-    .item_coupon .ip_div { width: 100%; }
-    .item_coupon button { width: 100%; }
-
-    .item_coupon .ip_div label { display: none; }
-    .item_coupon .ip_div input[type="text"] { width: 100%; }
-    .item_coupon > .btn_wrap { display: block; width: 100%; height: auto; margin: 10px 0; text-align: right; }
-}
+.orig_price { text-decoration: line-through; color: #999; font-size: 15px; }
