사용자 객실 예약 API 적용, 예약 후 완료페이지 이동 	modified:   src/app/home/home-routing.module.ts 	modified:   src/app/home/home.module.tns.ts 	modified:   src/app/home/home.module.ts 	modified:   src/app/home/payment/payment.component.html 	modified:   src/app/home/payment/payment.component.ts

--- a/src/app/home/payment/payment.component.html
+++ b/src/app/home/payment/payment.component.html
@@ -185,7 +185,7 @@
     </form>
     <div class="btn_wrap text-center mgt50">
         <div class="content">
-            <button class="btn-lg cancel_btn" (click)="location.back()">이전</button>
+            <button class="btn-lg cancel_btn" (click)="goBack()">이전</button>
             <button class="btn-lg primary_btn" (click)="pay()">결제하기</button>
         </div>
     </div>
