--- a/src/app/home/layout/header/header.component.html
+++ b/src/app/home/layout/header/header.component.html
@@ -12,8 +12,13 @@
         </nav>
     </div>
 </div>
+<!-- 스크롤 내려가면 header top: 0 -->
+<!-- 동시에 #header.gnb top: 100px -->
 <header id="header">
     <div class="content">
+        <a class="mobile_menu">모바일메뉴</a>
+        <!-- <a class="mobile_menu active">모바일메뉴</a> -->
+        <!-- 클릭하면 .mobile_menu.active 클래스 추가하며 .gnb { display: block; } -->
         <h1 class="logo"><a href="#"><img src="assets/images/logo.png" alt="모빌라"></a></h1>
         <nav class="gnb">
             <ul>
