--- a/src/app/home/layout/header/header.component.scss
+++ b/src/app/home/layout/header/header.component.scss
@@ -46,8 +46,15 @@
 
 /*** header ***/
 #header {
+    position: fixed;
+    width: 100%;
     height: 100px;
     border-bottom: $gray_border;
+    background: $white;
+    z-index: 100;
+    a.mobile_menu {
+        display: none;
+    }
     .logo {
         float: left;
         margin: 18px 0;
@@ -61,6 +68,58 @@
             font-size: 18px;
             &:last-child {
                 margin-right: 0;
+            }
+        }
+    }
+}
+
+
+/** mediaquery **/
+@include desktop {
+    #header {
+        a.mobile_menu {
+            @include mobile_menu;
+            color: $black;
+            top: 50px;
+            left: 20px;
+            margin-top: -8px;
+            height: 14px;
+            font-size: 0;
+            &:before {
+                @include mobile_menu;
+                bottom: 6px;
+            }
+            &:after {
+                @include mobile_menu;
+                bottom: 0; 
+            }
+            &.active {
+                border-top: 0;
+                &:before {transform: rotate(45deg);}
+                &:after {transform: rotate(-45deg); bottom: 6px;}
+            }
+        }
+        .logo {
+            margin-left: 60px;
+        }
+        .gnb {
+            display: none;
+            position: fixed;
+            top: 152px;
+            background: #fff;
+            width: 100%;
+            height: 100%;
+            left: 0px;
+            ul li {
+                display: block;
+                margin: 0;
+                border-bottom: $gray_border;
+                a {
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    padding-left: 50px;
+                }
             }
         }
     }
