--- a/src/app/home/layout/header/header.component.html
+++ b/src/app/home/layout/header/header.component.html
@@ -14,13 +14,14 @@
 </div>
 <!-- 스크롤 내려가면 header top: 0 -->
 <!-- 동시에 #header.gnb top: 100px -->
-<header id="header">
+<header id="header" [ngStyle]="{'top': offsetY > 0 ? 0 : '51px'}">
     <div class="content">
-        <a class="mobile_menu">모바일메뉴</a>
+        <a [ngClass]="['mobile_menu', mobMenuToggle ? 'active' : '']" (click)="mobMenuToggle = !mobMenuToggle">모바일메뉴</a>
         <!-- <a class="mobile_menu active">모바일메뉴</a> -->
         <!-- 클릭하면 .mobile_menu.active 클래스 추가하며 .gnb { display: block; } -->
         <h1 class="logo"><a href="#"><img src="assets/images/logo.png" alt="모빌라"></a></h1>
-        <nav class="gnb">
+        <nav class="gnb" 
+            [ngStyle]="{'top': offsetY > 0 ? '100px' : '*', 'display': mobMenuToggle ? 'block' : 'none'}">
             <ul>
                 <li><a href="#">모빌라캠핑장</a></li>
                 <li><a href="#">모빌라홀캠핑장</a></li>
