--- a/src/app/home/layout/header/header.component.scss
+++ b/src/app/home/layout/header/header.component.scss
@@ -1,126 +1,130 @@
 @import '/src/assets/var';
 
-/*** top ***/
-#top {
-    height: 52px;
-
-    .util {
-        float: right;
-        margin: 10px 0;
-        ul li {
-            float: left;
-            margin-right: 30px;
-            color: $light_gray;
-            font-size: 12px;
-            line-height: 32px;
-            a {
-                color: $light_gray;
-            }
-        }
-    }
-    .search_box {
-        float: right;
-        width: 200px;
-        height: 32px;
-        margin: 10px 0;
-        padding: 0 12px;
-        border-radius: 16px;
-        background: $gray_bg;
-        overflow: hidden;
-        input[type=text] {
-            width: 140px;
-            height: 32px;
-            border-radius: 16px;
-            padding: 0 6px;
-            background: transparent;
-        }
-        .search_btn {
-            float: right;
-            width: 22px;
-            height: 22px;
-            margin: 5px 0;
-            background: url('#{$img_url}search.png') 50% 50% no-repeat;
-        }
-    }
-}
-
 /*** header ***/
 #header {
     position: fixed;
+    top: 0;
     width: 100%;
-    height: 100px;
+    height: 152px;
     border-bottom: $gray_border;
     background: $white;
     z-index: 100;
-    a.mobile_menu {
-        display: none;
+    #top {
+        height: 52px;
+    
+        .util {
+            float: right;
+            margin: 10px 0;
+            ul li {
+                float: left;
+                margin-right: 30px;
+                color: $light_gray;
+                font-size: 12px;
+                line-height: 32px;
+                a {
+                    color: $light_gray;
+                }
+            }
+        }
+        .search_box {
+            float: right;
+            width: 200px;
+            height: 32px;
+            margin: 10px 0;
+            padding: 0 12px;
+            border-radius: 16px;
+            background: $gray_bg;
+            overflow: hidden;
+            input[type=text] {
+                width: 140px;
+                height: 32px;
+                border-radius: 16px;
+                padding: 0 6px;
+                background: transparent;
+            }
+            .search_btn {
+                float: right;
+                width: 22px;
+                height: 22px;
+                margin: 5px 0;
+                background: url('#{$img_url}search.png') 50% 50% no-repeat;
+            }
+        }
     }
-    .logo {
-        float: left;
-        margin: 18px 0;
-    }
-    .gnb {
-        float: right;
-        ul li {
-            display: inline-block;
-            margin-right: 40px;
-            line-height: 100px;
-            font-size: 18px;
-            &:last-child {
-                margin-right: 0;
+    #head {
+        .mobile_menu {
+            display: none;
+        }
+        .logo {
+            float: left;
+            margin: 18px 0;
+        }
+        .gnb {
+            float: right;
+            ul li {
+                display: inline-block;
+                margin-right: 40px;
+                line-height: 100px;
+                font-size: 18px;
+                &:last-child {
+                    margin-right: 0;
+                }
             }
         }
     }
 }
-
 
 /** mediaquery **/
 @include desktop {
     #header {
-        a.mobile_menu {
-            @include mobile_menu;
-            color: $black;
-            top: 50px;
-            left: 20px;
-            margin-top: -8px;
-            height: 14px;
-            font-size: 0;
-            &:before {
+        
+        #head {
+            .mobile_menu {
                 @include mobile_menu;
-                bottom: 6px;
+                color: $black;
+                top: 100px;
+                left: 20px;
+                margin-top: -8px;
+                height: 14px;
+                font-size: 0;
+                &:before {
+                    @include mobile_menu;
+                    bottom: 6px;
+                }
+                &:after {
+                    @include mobile_menu;
+                    bottom: 0; 
+                }
+                &.active {
+                    border-top: 0;
+                    &:before {transform: rotate(45deg);}
+                    &:after {transform: rotate(-45deg); bottom: 6px;}
+                }
             }
-            &:after {
-                @include mobile_menu;
-                bottom: 0; 
+            .logo {
+                margin-left: 50px;
             }
-            &.active {
-                border-top: 0;
-                &:before {transform: rotate(45deg);}
-                &:after {transform: rotate(-45deg); bottom: 6px;}
-            }
-        }
-        .logo {
-            margin-left: 60px;
-        }
-        .gnb {
-            display: none;
-            position: fixed;
-            top: 152px;
-            background: #fff;
-            width: 100%;
-            height: 100%;
-            left: 0px;
-            ul li {
-                display: block;
-                margin: 0;
-                border-bottom: $gray_border;
-                a {
+            .gnb {
+                display: none;
+                position: fixed;
+                top: 152px;
+                background: #fff;
+                width: 100%;
+                height: 100%;
+                left: 0px;
+                ul li {
                     display: block;
-                    width: 100%;
-                    height: 100%;
-                    padding-left: 50px;
+                    margin: 0;
+                    border-bottom: $gray_border;
+                    a {
+                        display: block;
+                        width: 100%;
+                        height: 100%;
+                        padding-left: 50px;
+                    }
                 }
             }
         }
+        
     }
 }
