안드로이드 설정 적용 	modified:   App_Resources/Android/AndroidManifest.xml 	modified:   package-lock.json 	modified:   package.json 	modified:   src/_app-common.scss 	modified:   src/app/app.module.tns.ts 	new file:   src/app/assets/images/no_image.jpg 	new file:   src/app/global/static-variable.tns.ts 	modified:   src/app/global/static-variable.ts 	modified:   src/app/home/accom-list/accom-list.component.tns.html 	new file:   src/app/home/accom-list/accom-list.component.tns.ts 	modified:   src/app/home/home-routing.module.tns.ts 	modified:   src/app/home/home.module.tns.ts 	modified:   src/app/home/layout/footer/footer.component.tns.html 	modified:   src/app/home/main/main.component.tns.ts 	modified:   src/app/home/unit-list/unit-list.component.tns.html 	modified:   src/app/home/unit-list/unit-list.component.tns.ts 	new file:   src/app/service/post-api.service.tns.ts 	modified:   src/app/shared/shared.module.tns.ts 	modified:   tsconfig.tns.json

--- a/src/app/home/layout/footer/footer.component.tns.html
+++ b/src/app/home/layout/footer/footer.component.tns.html
@@ -31,12 +31,18 @@
             </Label>
         </GridLayout>
         <GridLayout #tabContents col="1" marginTop="20"
-            (tap)="onBottomNavTap('unit')" verticalAlignment="middle">
-            <Label class="fa-regular" text="search" verticalAlignment="bottom"
+            (tap)="onBottomNavTap('accom')" verticalAlignment="middle">
+            <Label class="fa-regular" text="accom" verticalAlignment="bottom"
                 horizontalAlignment="center" fontSize="20">
             </Label>
         </GridLayout>
         <GridLayout #tabContents col="2" marginTop="20"
+            (tap)="onBottomNavTap('unit')" verticalAlignment="middle">
+            <Label class="fa-regular" text="unit" verticalAlignment="bottom"
+                horizontalAlignment="center" fontSize="20">
+            </Label>
+        </GridLayout>
+        <GridLayout #tabContents col="3" marginTop="20"
             (tap)="onBottomNavTap('login')" verticalAlignment="middle">
             <Label class="fa-regular" text="login" verticalAlignment="bottom"
                 horizontalAlignment="center" fontSize="20">
